--- a/index.html
+++ b/index.html
@@ -53,21 +53,21 @@
               <img
                 src="images/brett1.png"
                 alt="green surfboard"
-                class="d-block w-25" id="surfboard-green"
+                class="d-block w-25" id="surfboard-green" data-id="1"
               />
             </div>
             <div class="carousel-item">
               <img
                 src="images/brett2.png"
                 alt="gray surfboard"
-                class="d-block w-25" id="surfboard-gray"
+                class="d-block w-25" id="surfboard-gray" data-id="2"
               />
             </div>
             <div class="carousel-item">
               <img
                 src="images/brett3.png"
                 alt="pink surfboard"
-                class="d-block w-25" id="surfboard-pink"
+                class="d-block w-25" id="surfboard-pink" data-id="3"
               />
             </div>
           </div>
