--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
           </p>
           <p>Spillet er laget av:</p>
           <ul>
-            <li>Auden Johannes Tjersland Solbr Bay</li>
+            <li>Johannes Solbraa Bay</li>
             <li>Lilly Thi Bui</li>
             <li>Kaspar Kindem</li>
             <li>Stian Sagstad</li>
