--- a/index.html
+++ b/index.html
@@ -53,21 +53,27 @@
               <img
                 src="images/brett1.png"
                 alt="green surfboard"
-                class="d-block w-25" id="surfboard-green" data-id="1"
+                class="d-block w-25"
+                id="surfboard-green"
+                data-id="1"
               />
             </div>
             <div class="carousel-item">
               <img
                 src="images/brett2.png"
                 alt="gray surfboard"
-                class="d-block w-25" id="surfboard-gray" data-id="2"
+                class="d-block w-25"
+                id="surfboard-gray"
+                data-id="2"
               />
             </div>
             <div class="carousel-item">
               <img
                 src="images/brett3.png"
                 alt="pink surfboard"
-                class="d-block w-25" id="surfboard-pink" data-id="3"
+                class="d-block w-25"
+                id="surfboard-pink"
+                data-id="3"
               />
             </div>
           </div>
@@ -107,7 +113,7 @@
           <h1>Settings</h1>
           <div class="settings-div">
             <h2>Lyd</h2>
-            <input type="range" />
+            <input type="range" class="volume" min="0" max="1" step="0.1" />
           </div>
           <div class="settings-div">
             <h2>Oppløsning</h2>
@@ -136,6 +142,12 @@
         </div>
       </div>
     </section>
+
+    <audio autoplay id="backgroundSong">
+      <source src="media/background.mp3" type="audio/ogg" />
+      Please update your browser does not support the audio element.
+    </audio>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
