--- a/index.html
+++ b/index.html
@@ -145,7 +145,8 @@
 
     <audio autoplay id="backgroundSong">
       <source src="media/background.mp3" type="audio/ogg" />
-      Please update your browser does not support the audio element.
+      Please update: your browser does not support the audio element.
+
     </audio>
 
     <script
