--- a/index.html
+++ b/index.html
@@ -22,30 +22,10 @@
       </a>
       <div class="menu-container">
         <div class="box menu">
-          <img
-            src="images/btn-start.png"
-            alt="start game button"
-            class="btn"
-            id="btn-start"
-          />
-          <img
-            src="images/icon-how_to_play.png"
-            alt="how to play button"
-            class="btn"
-            id="btn-how-to-play"
-          />
-          <img
-            src="images/settings.png"
-            alt="settings button"
-            class="btn"
-            id="btn-settings"
-          />
-          <img
-            src="images/btn-credits.png"
-            alt="credits button"
-            class="btn"
-            id="btn-credits"
-          />
+          <img src="images/btn-start.png" alt="start game button" class="btn" id="btn-start" />
+          <img src="images/icon-how_to_play.png" alt="how to play button" class="btn" id="btn-how-to-play" />
+          <img src="images/settings.png" alt="settings button" class="btn" id="btn-settings" />
+          <img src="images/btn-credits.png" alt="credits button" class="btn" id="btn-credits" />
         </div>
         <div id="carousel-container" class="carousel" data-bs-ride="carousel">
           <div class="box carousel-inner">
@@ -59,39 +39,17 @@
               />
             </div>
             <div class="carousel-item">
-              <img
-                src="images/brett2.png"
-                alt="gray surfboard"
-                class="d-block w-25"
-                id="surfboard-gray"
-                data-id="2"
-              />
+              <img src="images/brett2.png" alt="gray surfboard" class="d-block w-25" id="surfboard-gray" data-id="2" />
             </div>
             <div class="carousel-item">
-              <img
-                src="images/brett3.png"
-                alt="pink surfboard"
-                class="d-block w-25"
-                id="surfboard-pink"
-                data-id="3"
-              />
+              <img src="images/brett3.png" alt="pink surfboard" class="d-block w-25" id="surfboard-pink" data-id="3" />
             </div>
           </div>
-          <button
-            class="carousel-control-prev"
-            type="button"
-            data-bs-target="#carousel-container"
-            data-bs-slide="prev"
-          >
+          <button class="carousel-control-prev" type="button" data-bs-target="#carousel-container" data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Previous</span>
           </button>
-          <button
-            class="carousel-control-next"
-            type="button"
-            data-bs-target="#carousel-container"
-            data-bs-slide="next"
-          >
+          <button class="carousel-control-next" type="button" data-bs-target="#carousel-container" data-bs-slide="next">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Next</span>
           </button>
@@ -99,12 +57,10 @@
         <div class="box block how-to-play">
           <h1>Spillregler</h1>
           <ul>
-            <li>
-              Velg et surfebrett og bruk tastaturene (venstre, høyre, opp og
-              ned) til å bevege deg rundt.
-            </li>
+            <li>Velg et surfebrett og bruk tastaturene (venstre, høyre, opp og ned) til å bevege deg rundt.</li>
             <li>Hensikten er å få høyeste poengscore</li>
             <li>Du mister liv ved å treffe en hindring</li>
+            <li>Du får et liv ved å ta hjerter</li>
             <li>Spillet slutter når du har 0 liv igjen.</li>
           </ul>
           <img src="images/btn-back.png" alt="back button" class="btn-back" />
@@ -115,22 +71,11 @@
             <h2>Lyd</h2>
             <input type="range" class="volume" min="0" max="1" step="0.1" />
           </div>
-          <div class="settings-div">
-            <h2>Oppløsning</h2>
-            <select name="resolution" id="resolution">
-              <option value="1280x720">1280x720</option>
-              <option value="1600x900">1600x900</option>
-              <option value="1920x1080">1920x1080</option>
-            </select>
-          </div>
           <img src="images/btn-back.png" alt="back button" class="btn-back" />
         </div>
         <div class="box block credits">
           <h1>Credits</h1>
-          <p>
-            Dette spillet var en prosjektoppgave i informasjonsbehandling ved
-            NTNU.
-          </p>
+          <p>Dette spillet var en prosjektoppgave i informasjonsbehandling ved NTNU.</p>
           <p>Spillet er laget av:</p>
           <ul>
             <li>Johannes Solbraa Bay</li>
@@ -144,9 +89,8 @@
     </section>
 
     <audio autoplay id="backgroundSong">
-      <source src="media/background.mp3" type="audio/ogg" />
+      <source src="media/background.mp3" type="audio/mp3" />
       Please update: your browser does not support the audio element.
-
     </audio>
 
     <script
