--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
         <div id="carousel-container" class="carousel" data-bs-ride="carousel">
           <div class="box carousel-inner">
-            <div class="carousel-item active">
+            <div class="carousel-item active" data-interval="false">
               <img
                 src="images/brett1.png"
                 alt="green surfboard"
@@ -90,6 +90,10 @@
 
     <audio autoplay id="backgroundSong">
       <source src="media/background.mp3" type="audio/mp3" />
+      Please update: your browser does not support the audio element.
+    </audio>
+    <audio id="click">
+      <source src="media/select-click.mp3" type="audio/mp3" />
       Please update: your browser does not support the audio element.
     </audio>
 
