--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Duck surfer</title>
+    <title>Duck Surfer</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -55,28 +55,31 @@
           </button>
         </div>
         <div class="box block how-to-play">
-          <h1>Spillregler</h1>
+          <h1>Game Rules</h1>
           <ul>
-            <li>Velg et surfebrett og bruk tastaturene (venstre, høyre, opp og ned) til å bevege deg rundt.</li>
-            <li>Hensikten er å få høyeste poengscore</li>
-            <li>Du mister liv ved å treffe en hindring</li>
-            <li>Du får et liv ved å ta hjerter</li>
-            <li>Spillet slutter når du har 0 liv igjen.</li>
+            <li>Choose a surfing board and use the arrow keys to move around.</li>
+            <li>Gather points by avoiding enemies and collecting hearts.</li>
+            <li>Lose lives by hitting enemies.</li>
+            <li>Gain lives you've lost by collecting hearts.</li>
+            <li>If you drop all three lives, it's game over.</li>
+            <li>And watch out so you don't get caught by the wave...</li>
           </ul>
           <img src="images/btn-back.png" alt="back button" class="btn-back" />
         </div>
         <div class="box block settings">
           <h1>Settings</h1>
           <div class="settings-div">
-            <h2>Lyd</h2>
+            <h2>Difficulty Level</h2>
+            <input type="range" class="difficultySetting" min="0.5" max="1.5" step="0.5" />
+            <h2>Sound</h2>
             <input type="range" class="volume" min="0" max="1" step="0.1" />
           </div>
           <img src="images/btn-back.png" alt="back button" class="btn-back" />
         </div>
         <div class="box block credits">
           <h1>Credits</h1>
-          <p>Dette spillet var en prosjektoppgave i informasjonsbehandling ved NTNU.</p>
-          <p>Spillet er laget av:</p>
+          <p>This game was mad as a Bachelor's in Information Technology project at NTNU.</p>
+          <p>It was made by:</p>
           <ul>
             <li>Johannes Solbraa Bay</li>
             <li>Lilly Thi Bui</li>
