--- a/index.html
+++ b/index.html
@@ -69,8 +69,6 @@
         <div class="box block settings">
           <h1>Settings</h1>
           <div class="settings-div">
-            <h2>Difficulty Level</h2>
-            <input type="range" class="difficultySetting" min="0.5" max="1.5" step="0.5" />
             <h2>Sound</h2>
             <input type="range" class="volume" min="0" max="1" step="0.1" />
           </div>
@@ -78,7 +76,7 @@
         </div>
         <div class="box block credits">
           <h1>Credits</h1>
-          <p>This game was mad as a Bachelor's in Information Technology project at NTNU.</p>
+          <p>This game was made as a Bachelor's in Information Technology project at NTNU.</p>
           <p>It was made by:</p>
           <ul>
             <li>Johannes Solbraa Bay</li>
@@ -88,6 +86,11 @@
           </ul>
           <img src="images/btn-back.png" alt="back button" class="btn-back" />
         </div>
+      </div>
+      <div class="difficulty-div">
+        <img src="images/easy.png" alt="easy difficulty" id="easy" />
+        <img src="images/medium.png" alt="medium difficulty" id="medium" />
+        <img src="images/hard.png" alt="hard difficulty" id="hard" />
       </div>
     </section>
 
