--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
           <h1>Game Rules</h1>
           <ul>
             <li>Choose a surfing board and use the arrow keys to move around.</li>
-            <li>Gather points by avoiding enemies and collecting hearts.</li>
+            <li>Watch out for the plastic bags, sharks and octopuses!</li>
+            <li>Gather points by avoiding those, and by collecting hearts.</li>
             <li>Lose lives by hitting enemies.</li>
             <li>Gain lives you've lost by collecting hearts.</li>
             <li>If you drop all three lives, it's game over.</li>
