--- a/game.html
+++ b/game.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Duck surfer</title>
-    <link rel="stylesheet" href="css/game.css">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Duck Surfer's main gamepage" />
+    <title>Duck surfer | Gamepage</title>
+    <link rel="stylesheet" href="css/game.css" />
+  </head>
+  <body>
     <div id="game-container"></div>
 
-<script src="//cdn.jsdelivr.net/npm/phaser@3.55.2/dist/phaser.js"></script>
-<script src="js/scenes/bootScene.js"></script>
-<script src="js/scenes/gameScene.js"></script>
-<script src="js/scenes/pauseScene.js"></script>
-<script src="js/scenes/endScene.js"></script>
-<script src="js/game.js"></script>
-</body>
+    <script src="//cdn.jsdelivr.net/npm/phaser@3.55.2/dist/phaser.js"></script>
+    <script src="js/scenes/bootScene.js"></script>
+    <script src="js/scenes/gameScene.js"></script>
+    <script src="js/scenes/pauseScene.js"></script>
+    <script src="js/scenes/endScene.js"></script>
+    <script src="js/game.js"></script>
+  </body>
 </html>
