--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Duck Surfer</title>
+    <meta
+      name="description"
+      content="Duck Surfer is an interactive game where you are playing a surfing duck while trying to survive in dangerous water. Go on a new adventure, survive and get as many points as you can!"
+    />
+    <title>Duck Surfer | Homepage</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
