--- a/game.html
+++ b/game.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Duck Surfer's main gamepage" />
     <title>Duck surfer | Gamepage</title>
-    <link rel="stylesheet" href="css/game.css" />
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
     <div id="game-container" onload="hasLoaded()"></div>
