--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
       <div class="menu">
         <div class="menu__item menu__container">
           <img src="images/btn-start.png" alt="start game button" class="btn menu__btn" id="btn-start" />
-          <img src="images/icon-how_to_play.png" alt="how to play button" class="btn menu__btn" id="btn-how-to-play" />
-          <img src="images/settings.png" alt="settings button" class="btn menu__btn" id="btn-settings" />
+          <img src="images/btn-how_to_play.png" alt="how to play button" class="btn menu__btn" id="btn-how-to-play" />
+          <img src="images/btn-settings.png" alt="settings button" class="btn menu__btn" id="btn-settings" />
           <img src="images/btn-credits.png" alt="credits button" class="btn menu__btn" id="btn-credits" />
         </div>
         <div id="carousel-container" class="carousel" data-bs-ride="carousel">
@@ -88,6 +88,10 @@
           <div class="menu__settings-container">
             <h2 class="menu__settings-title">Sound</h2>
             <input type="range" class="volume" min="0" max="1" step="0.1" />
+          </div>
+          <div class="menu__settings-container">
+            <input type="checkbox" id="black-colour" name="black-colour" />
+            <label for="black-colour">Change colour on buttons</label>
           </div>
           <img src="images/btn-back.png" alt="back button" class="menu__btn-back menu__settings-back" />
         </div>
