high contrast title

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           </div>
           <div class="menu__settings-container">
             <input type="checkbox" id="black-colour" name="black-colour" />
-            <label for="black-colour">Change colour on buttons</label>
+            <label for="black-colour">High-contrast buttons</label>
           </div>
           <img src="images/btn-back.png" alt="back button" class="menu__btn-back menu__settings-back" />
         </div>
