--- a/game.html
+++ b/game.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <div id="game-container" onload="hasLoaded()"></div>
+    <div id="game-container"></div>
 
     <script src="//cdn.jsdelivr.net/npm/phaser@3.55.2/dist/phaser.js"></script>
     <script src="js/scenes/bootScene.js"></script>
