--- a/game.html
+++ b/game.html
@@ -12,6 +12,7 @@
     <div id="game-container"></div>
 
     <script src="//cdn.jsdelivr.net/npm/phaser@3.55.2/dist/phaser.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/phaser@3.55.2/dist/phaser.min.js"></script>
     <script src="js/scenes/bootScene.js"></script>
     <script src="js/scenes/gameScene.js"></script>
     <script src="js/scenes/pauseScene.js"></script>
